--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "babel-runtime": "^6.26.0",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
