--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "primeicons": "^6.0.1",
     "primereact": "^9.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
