--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-ssl-ps": "($env:HTTPS = 'true') -and (npm start)",
+    "start-ssl-ln": "HTTPS=true npm start"
   },
   "eslintConfig": {
     "extends": [
