--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start-ssl-ps": "($env:HTTPS = 'true') -and (npm start)",
-    "start-ssl-ln": "HTTPS=true npm start"
+    "ssl-ps": "($env:HTTPS = 'true')",
+    "ssl-ln": "HTTPS=true"
   },
   "eslintConfig": {
     "extends": [
