refactor: Removendo adição de script intermitente

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,9 +22,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "ssl-ps": "($env:HTTPS = 'true')",
-    "ssl-ln": "HTTPS=true"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
