--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "babel-runtime": "^6.26.0",
+    "json-server": "^0.17.4",
     "primeicons": "^6.0.1",
     "primereact": "^9.2.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
+    "react-router-dom": "^6.19.0",
     "react-scripts": "^5.0.1",
     "regenerator-runtime": "^0.13.11",
     "web-vitals": "^2.1.4"
@@ -22,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server --watch data/db.json"
   },
   "eslintConfig": {
     "extends": [
