--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -12,6 +12,7 @@
     ],
     "author": "Thyago Erick S. Gois",
     "start_url": "/index.html",
-    "background_color": "#055904"
+    "background_color": "#055904",
+    "display":"fullscreen"
   }
   
