--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
+  "name": "unibli-frontend",
+  "version": "0.100.10",
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^2.0.1",
