--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "backend"]
-	path = https://github.com/UniBli/unibli-backend.git
-	url = ./backend
+	path = backend
+	url = https://github.com/UniBli/unibli-backend.git
